infra/proxy/ingress-srv.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-srv
#   annotations:
#     networking.kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: kafka.live
#       http:
#         paths:
#           - path: /api/v1/user/?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: micro-service-kafka-user-service
#                 port:
#                   number: 3000
#           - path: /api/v1/product/?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: micro-service-kafka-product-service
#                 port:
#                   number: 4000
#           - path: /api/v1/order/?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: micro-service-kafka-order-service
#                 port:
#                   number: 6000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: shapeup.com
    http:
      paths:
      - path: /api/user/?(.*)
        pathType: Prefix
        backend:
          service:
            name: user-srv
            port:
              number: 8000
      - path: /api/trainer/?(.*)
        pathType: Prefix
        backend:
          service:
            name: trainer-srv
            port:
              number: 8001
      - path: /api/admin/?(.*)
        pathType: Prefix
        backend:
          service:
            name: admin-srv
            port:
              number: 8002
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 5173
  ingressClassName: nginx
